[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/Textures/GUI/arrowIcon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/KunaHouse/lampAleks.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/KunaHouse/KunaHouse-2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/KunaHouse/KunaHouse-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/KunaHouse/KunaHouse-0.png" type="Texture" id=5]
[ext_resource path="res://Scripts/KunaHouse/KunaHouseManagerTestKatka.gd" type="Script" id=6]
[ext_resource path="res://Assets/Textures/KunaHouse/circle.png" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/GameCaroline/bubble.png" type="Texture" id=8]
[ext_resource path="res://Assets/Textures/Kuna/kunaIde.png" type="Texture" id=9]
[ext_resource path="res://Assets/Textures/KunaHouse/houseStuff-1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Textures/Kuna/kunaWalking.png" type="Texture" id=11]
[ext_resource path="res://Assets/Textures/Kuna/kunaSitting.png" type="Texture" id=12]
[ext_resource path="res://Assets/Textures/KunaHouse/kunaSleeping.png" type="Texture" id=14]
[ext_resource path="res://Assets/Textures/KunaHouse/houseStuff-3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Textures/KunaHouse/bigWindow.png" type="Texture" id=16]
[ext_resource path="res://Assets/Textures/KunaHouse/houseStuff-2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Textures/KunaHouse/houseStuff-0.png" type="Texture" id=18]
[ext_resource path="res://Assets/Textures/KunaHouse/gramophone.png" type="Texture" id=19]
[ext_resource path="res://Assets/Textures/KunaHouse/flower.png" type="Texture" id=20]
[ext_resource path="res://Assets/Textures/KunaHouse/plantSmall.png" type="Texture" id=21]
[ext_resource path="res://Assets/Textures/KunaHouse/plantBig.png" type="Texture" id=22]
[ext_resource path="res://Assets/Textures/KunaHouse/lampBedside.png" type="Texture" id=23]

[sub_resource type="Animation" id=1]
resource_name = "playingMusic"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "plant"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath("plantSmall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "sitting"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KunaChair:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -2.60064, 1.63511, -2.60064 ]
}

[sub_resource type="Animation" id=4]
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "plantMove"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "plantMove"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 4.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 1.1, 1.4, 1.7, 2, 2.3, 2.6, 2.9, 3.2, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 2, 0, 5, 6, 7, 6, 7, 3, 4 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walking"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 160.122, 99.2835 )

[node name="KunaHouseScene" type="Node"]

[node name="KunaHouseManager" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="House" type="Node2D" parent="."]

[node name="BackgroundYellow" type="ColorRect" parent="House"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -3.0
margin_right = 6549.0
margin_bottom = 1674.0
mouse_filter = 2
color = Color( 0.882353, 0.603922, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPurple" type="ColorRect" parent="House"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6536.0
margin_top = -3.0
margin_right = 8534.0
margin_bottom = 1684.0
mouse_filter = 2
color = Color( 0.286275, 0.117647, 0.333333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundOrange" type="ColorRect" parent="House"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
margin_top = 1194.0
margin_right = 8540.0
margin_bottom = 1694.0
mouse_filter = 2
color = Color( 0.796078, 0.427451, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bigWindow2" type="Area2D" parent="House"]

[node name="bigWindow" type="Sprite" parent="House/bigWindow2"]
position = Vector2( 3895.43, 610.047 )
rotation = 7.45058e-09
texture = ExtResource( 16 )
hframes = 2
vframes = 2
frame = 3
__meta__ = {
"_edit_group_": true
}

[node name="circle" type="Sprite" parent="House/bigWindow2"]
self_modulate = Color( 0.141176, 0.215686, 0.501961, 1 )
show_behind_parent = true
position = Vector2( 3906.26, 616.688 )
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/bigWindow2"]
polygon = PoolVector2Array( 3400.34, 669.545, 3589.11, 960.258, 3996.87, 1065.97, 4306.46, 801.687, 4325.33, 435.464, 3974.21, 171.179, 3585.34, 242.914 )

[node name="smallBrownWindow" type="Sprite" parent="House"]
position = Vector2( 5251.91, 330.983 )
rotation = -1.65595
scale = Vector2( 0.726553, 0.726553 )
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 1102.24, 709.832, 703.235, 707.576 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect2" type="ColorRect" parent="House/smallBrownWindow"]
show_behind_parent = true
margin_left = -206.336
margin_top = -206.063
margin_right = 247.664
margin_bottom = 230.938
color = Color( 0.141176, 0.215686, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bricks" type="Node2D" parent="House"]
position = Vector2( 6148.77, 707.16 )
scale = Vector2( 0.76, 0.76 )

[node name="houseStuff-2" type="Sprite" parent="House/bricks"]
position = Vector2( -9.93604, -94.1437 )
scale = Vector2( 1, 0.857064 )
texture = ExtResource( 17 )

[node name="houseStuff-0" type="Sprite" parent="House/bricks"]
position = Vector2( 1726.48, -105.622 )
scale = Vector2( 0.833376, 0.849915 )
texture = ExtResource( 18 )

[node name="ColorRect" type="ColorRect" parent="House/bricks"]
show_behind_parent = true
margin_left = 1069.0
margin_top = -876.0
margin_right = 1503.0
margin_bottom = -367.0
color = Color( 0.141176, 0.215686, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundObjects" type="Node2D" parent="House"]

[node name="BedFloorTiles" type="Sprite" parent="House/BackgroundObjects"]
position = Vector2( 4735.82, 1445.99 )
scale = Vector2( 1.18154, 1.04156 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( -0.839478, 1615.98, 1156.11, 270.826 )

[node name="BedFloorTiles2" type="Sprite" parent="House/BackgroundObjects"]
position = Vector2( 8367.47, 1512.92 )
scale = Vector2( 0.90158, 0.90158 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( -0.839478, 1615.98, 350.894, 270.826 )

[node name="UnderCarpetFloorTiles" type="Sprite" parent="House/BackgroundObjects"]
position = Vector2( 1320.53, 1444.09 )
scale = Vector2( 1.05735, 1.05735 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( -0.387573, -3.27771, 2000.68, 276.688 )

[node name="UnderCarpetFloorTiles2" type="Sprite" parent="House/BackgroundObjects"]
position = Vector2( 7271.12, 1463.47 )
scale = Vector2( 0.99773, 0.99773 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( -0.387573, -3.27771, 2000.68, 276.688 )

[node name="Carpet" type="Sprite" parent="House/BackgroundObjects"]
position = Vector2( 3836.57, 1346.8 )
scale = Vector2( 1.10082, 0.980316 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( -0.111862, 1362.03, 1892.13, 254.377 )

[node name="gramophone2" type="Area2D" parent="House"]

[node name="gramophone" type="Sprite" parent="House/gramophone2"]
position = Vector2( 2451.04, 833.531 )
texture = ExtResource( 19 )
hframes = 2
vframes = 2
frame = 3

[node name="gramophoneAP" type="AnimationPlayer" parent="House/gramophone2/gramophone"]
playback_speed = 0.8
anims/playingMusic = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/gramophone2"]
polygon = PoolVector2Array( 2170.19, 954.707, 2157.47, 569.062, 2424.46, 424.975, 2721.11, 797.906, 2848.24, 1170.84, 2543.12, 1348.83, 2199.85, 1208.98 )

[node name="Map" type="Sprite" parent="House"]
position = Vector2( 1314.31, 609.91 )
scale = Vector2( 0.644664, 0.644664 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( -8.7395, -22.208, 2026.3, 1767.5 )

[node name="CarolinaPicture" type="Sprite" parent="House"]
position = Vector2( 4708.93, 768.23 )
scale = Vector2( 0.671515, 0.671515 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 1.80658, 911.145, 1797.87 )

[node name="Bed" type="Sprite" parent="House"]
position = Vector2( 6822.31, 1029.44 )
scale = Vector2( 0.728786, 0.728786 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 3.54016, 0, 2000.09, 1353.31 )

[node name="smallPlant" type="Area2D" parent="House"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="House/smallPlant"]
anims/plant = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/smallPlant"]
polygon = PoolVector2Array( 3160.45, 1076.21, 3182.33, 1205.25, 3220.86, 1295.18, 3500.24, 1257.43, 3515.34, 1023.35, 3326.57, 819.471 )

[node name="plantSmall" type="Sprite" parent="House/smallPlant"]
position = Vector2( 3307.07, 1069.3 )
scale = Vector2( 0.652996, 0.652996 )
texture = ExtResource( 21 )
hframes = 3

[node name="lampAleks2" type="Area2D" parent="House"]
position = Vector2( 33.6359, -10.0908 )
__meta__ = {
"_edit_group_": true
}

[node name="lampAleks" type="Sprite" parent="House/lampAleks2"]
position = Vector2( 291.732, 932.882 )
rotation = -0.0208787
scale = Vector2( 0.759008, 0.723753 )
texture = ExtResource( 2 )
hframes = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/lampAleks2"]
polygon = PoolVector2Array( 227.233, 341.43, 141.61, 595.92, 324.748, 691.057, 519.778, 624.461, 474.588, 322.402 )

[node name="kunaChair" type="Area2D" parent="House"]

[node name="KunaChair" type="Sprite" parent="House/kunaChair"]
position = Vector2( 642.659, 1513.63 )
rotation = -0.0453898
scale = Vector2( 1.50593, 1.52715 )
texture = ExtResource( 12 )
offset = Vector2( -5.16536, -278.475 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="House/kunaChair"]
autoplay = "sitting"
anims/sitting = SubResource( 3 )

[node name="kunaSleeping" type="Sprite" parent="House"]
position = Vector2( 6852.26, 931.638 )
scale = Vector2( 0.800766, 0.800766 )
texture = ExtResource( 14 )
hframes = 2
vframes = 2
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="House/kunaSleeping"]
autoplay = "sleeping"
playback_speed = 0.4
anims/sleeping = SubResource( 4 )

[node name="LittleLampsTop" type="Area2D" parent="House"]

[node name="lightBubbles" type="Node2D" parent="House/LittleLampsTop"]

[node name="bubble" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.556863, 0.360784, 0.937255, 0.341176 )
position = Vector2( 1577.05, 99.0923 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble2" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble"]
self_modulate = Color( 0.952941, 0.635294, 0.980392, 0.341176 )
position = Vector2( 1.57062, 0.785301 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble3" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.996078, 0.937255, 0.45098, 0.341176 )
position = Vector2( 253.05, 191.092 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble4" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble3"]
self_modulate = Color( 0.996078, 0.937255, 0.45098, 0.423529 )
position = Vector2( -1.37356, 0.099823 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble5" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.996078, 0.45098, 0.45098, 0.341176 )
position = Vector2( 2329.05, 211.092 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble6" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble5"]
self_modulate = Color( 0.968627, 0.780392, 0.611765, 0.341176 )
position = Vector2( 1.41827, -0.633087 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble7" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.996078, 0.937255, 0.45098, 0.341176 )
position = Vector2( 3025.05, 91.0923 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble8" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble7"]
self_modulate = Color( 0.996078, 0.937255, 0.45098, 0.423529 )
position = Vector2( -2.44934, 2.8186 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble9" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.45098, 0.996078, 0.701961, 0.341176 )
position = Vector2( 3617.05, 83.0923 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble10" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble9"]
self_modulate = Color( 0.560784, 0.972549, 0.694118, 0.341176 )
position = Vector2( -2.03345, 0.322594 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble11" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.556863, 0.360784, 0.937255, 0.341176 )
position = Vector2( 5740.75, 177.379 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble12" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble11"]
self_modulate = Color( 0.952941, 0.458824, 0.968627, 0.341176 )
position = Vector2( 0.880615, -2.31644 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble13" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.996078, 0.937255, 0.45098, 0.341176 )
position = Vector2( 6164.26, 632.364 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble14" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble13"]
self_modulate = Color( 0.996078, 0.937255, 0.45098, 0.423529 )
position = Vector2( -0.785156, 4.34705 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble15" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.996078, 0.45098, 0.45098, 0.341176 )
position = Vector2( 5674.26, 778.364 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble16" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble15"]
self_modulate = Color( 0.996078, 0.784314, 0.45098, 0.341176 )
position = Vector2( -0.785645, 3.23645 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble17" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.556863, 0.360784, 0.937255, 0.341176 )
position = Vector2( 6066.26, 1318.36 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble18" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble17"]
self_modulate = Color( 0.784314, 0.505882, 0.972549, 0.341176 )
position = Vector2( -0.7854, 3.05307 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble19" type="Sprite" parent="House/LittleLampsTop/lightBubbles"]
self_modulate = Color( 0.45098, 0.996078, 0.701961, 0.341176 )
position = Vector2( 5512.27, 1440.37 )
scale = Vector2( 2.69824, 2.69824 )
z_index = 6
texture = ExtResource( 8 )

[node name="bubble20" type="Sprite" parent="House/LittleLampsTop/lightBubbles/bubble19"]
self_modulate = Color( 0.631373, 0.94902, 0.568627, 0.341176 )
position = Vector2( 3.18469, 7.63971 )
scale = Vector2( 0.199193, 0.206397 )
z_index = 6
texture = ExtResource( 8 )

[node name="tree" type="Sprite" parent="House/LittleLampsTop"]
position = Vector2( 5883.53, 843.106 )
rotation = -3.13527
scale = Vector2( 1.32011, 1.32646 )
z_index = 5
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 571.723, 204.061, 543.766, 1330.12 )
__meta__ = {
"_edit_group_": true
}

[node name="littleLampsTree" type="Sprite" parent="House/LittleLampsTop/tree"]
position = Vector2( 29.5708, 16.3884 )
z_index = 7
z_as_relative = false
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( -7.63174, 191.78, 581.361, 1338.35 )

[node name="littleLampsCorner" type="Sprite" parent="House/LittleLampsTop"]
position = Vector2( 186.008, 174.26 )
rotation = 1.02378
scale = Vector2( 1.22482, 1.22482 )
z_index = 7
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 395.254, 197.04, 189.114, 435.287 )

[node name="littleLampsU" type="Sprite" parent="House/LittleLampsTop"]
position = Vector2( 2600.85, 122.123 )
scale = Vector2( 1.22482, 1.22482 )
z_index = 7
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( -83.8651, -17.5003, 2044.53, 220.975 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/LittleLampsTop"]
polygon = PoolVector2Array( -61.3746, 228.407, 94.6254, 232.407, 304.868, 253.686, 306.625, 132.407, 410.625, -27.5925, 1374.63, -39.5925, 1554.84, 171.807, 1732.38, 97.0559, 2259.64, 190.495, 2295.68, 278.594, 2403.78, 263.769, 2410.48, 201.173, 3186.63, 156.407, 3527.74, 110.404, 3621.18, 162.463, 3714.62, 101.061, 3882.63, -155.593, 5595.1, -87.3093, 5665.66, 164.675, 5857.17, 446.897, 5771.49, 734.159, 5574.95, 693.842, 5569.91, 905.508, 5675.74, 960.945, 5600.14, 1162.53, 5489.27, 1399.4, 5373.36, 1485.07, 5448.95, 1600.98, 5700.94, 1752.18, 5957.96, 1354.04, 6104.11, 1414.52, 6164.59, 1258.29, 6088.99, 996.223, 6109.15, 779.516, 6305.7, 628.326, 6225.06, 492.254, 6290.58, -127.627, 3326.75, -227.503, -176.089, -126.709 )

[node name="plitviceIcon" type="Sprite" parent="House"]
position = Vector2( 3055.87, 598.407 )
rotation = 1.5708
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 1113.89, 200.852, 776.774, 515.582 )

[node name="flower2" type="Area2D" parent="House"]

[node name="flower" type="Sprite" parent="House/flower2"]
position = Vector2( 5242.05, 987.444 )
scale = Vector2( 0.711665, 0.711665 )
texture = ExtResource( 20 )
hframes = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/flower2"]
polygon = PoolVector2Array( 5169.48, 629.252, 5088.31, 778.384, 5129.84, 1280.53, 5156.27, 1348.48, 5329.94, 1352.26, 5388.46, 1040.78, 5394.13, 653.793 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="House/flower2"]
anims/plantMove = SubResource( 5 )

[node name="regocIcon" type="Sprite" parent="House"]
position = Vector2( 3854.44, 1299.92 )
scale = Vector2( 0.735776, 0.630668 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( -4.84692, 1745.27, 769.311, 307.009 )

[node name="MoveHouseTween" type="Tween" parent="House"]

[node name="plantBigA" type="Area2D" parent="House"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/plantBigA"]
position = Vector2( 469.871, 82.5449 )
polygon = PoolVector2Array( 7264.11, 1329.5, 7565.72, 1316.8, 7733.98, 605.648, 7603.82, 278.644, 7283.16, 186.574, 7168.87, 602.473 )

[node name="plantBig" type="Sprite" parent="House/plantBigA"]
position = Vector2( 7903.51, 796.273 )
scale = Vector2( 1.21812, 1.21812 )
texture = ExtResource( 22 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="House/plantBigA/plantBig"]
anims/plantMove = SubResource( 6 )

[node name="kuna" type="Area2D" parent="House"]
position = Vector2( 1554.34, 1061.55 )
scale = Vector2( 1.08616, 1.08616 )
z_index = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/kuna"]
polygon = PoolVector2Array( -126.298, -443.239, -188.937, -311.001, -161.097, -146.284, -172.697, 53.2321, -112.378, 452.265, 166.017, 459.224, 168.337, 296.827, 177.616, -58.126, 182.256, -290.122, 133.537, -443.239 )

[node name="kunaIdle" type="Sprite" parent="House/kuna"]
position = Vector2( -13.6317, -4.56982 )
scale = Vector2( 1.45982, 1.45982 )
texture = ExtResource( 9 )
hframes = 3
vframes = 3

[node name="kunaIdleAP" type="AnimationPlayer" parent="House/kuna/kunaIdle"]
anims/idle = SubResource( 7 )

[node name="kunaWalking" type="Sprite" parent="House/kuna"]
visible = false
position = Vector2( -13.6317, -4.56982 )
scale = Vector2( 1.45982, 1.45982 )
texture = ExtResource( 11 )
hframes = 3
vframes = 3

[node name="kunaWalkingAP" type="AnimationPlayer" parent="House/kuna/kunaWalking"]
playback_speed = 0.9
anims/walking = SubResource( 8 )

[node name="lampBedsideA" type="Area2D" parent="House"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/lampBedsideA"]
polygon = PoolVector2Array( 7355.49, 320.802, 7320.21, 441.754, 7327.77, 648.381, 7567.16, 698.778, 7597.39, 497.191, 7577.86, 319.247, 7456.28, 260.325 )

[node name="lampBedside" type="Sprite" parent="House/lampBedsideA"]
position = Vector2( 7453.23, 489.192 )
scale = Vector2( 0.533623, 0.533623 )
texture = ExtResource( 23 )
hframes = 2

[node name="HouseGUI" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="HouseArrowRight" type="Area2D" parent="HouseGUI"]
position = Vector2( 2063.44, 1558.14 )
scale = Vector2( 0.8, 0.8 )
z_index = 200
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseGUI/HouseArrowRight"]
shape = SubResource( 9 )

[node name="right" type="Sprite" parent="HouseGUI/HouseArrowRight"]
scale = Vector2( 0.391171, 0.391171 )
texture = ExtResource( 1 )

[node name="HouseArrowLeft" type="Area2D" parent="HouseGUI"]
position = Vector2( 159.258, 1556.86 )
scale = Vector2( -0.8, 0.8 )
z_index = 200
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseGUI/HouseArrowLeft"]
shape = SubResource( 9 )

[node name="right" type="Sprite" parent="HouseGUI/HouseArrowLeft"]
scale = Vector2( 0.391171, 0.391171 )
texture = ExtResource( 1 )

[connection signal="input_event" from="House/bigWindow2" to="KunaHouseManager" method="_on_bigWindow_input_event"]
[connection signal="input_event" from="House/gramophone2" to="KunaHouseManager" method="_on_gramophone2_input_event"]
[connection signal="input_event" from="House/smallPlant" to="KunaHouseManager" method="_on_smallPlant_input_event"]
[connection signal="input_event" from="House/lampAleks2" to="KunaHouseManager" method="_on_lampAleks2_input_event"]
[connection signal="input_event" from="House/LittleLampsTop" to="KunaHouseManager" method="_on_LittleLampsTop_input_event"]
[connection signal="input_event" from="House/flower2" to="KunaHouseManager" method="_on_flower2_input_event"]
[connection signal="input_event" from="House/plantBigA" to="KunaHouseManager" method="_on_plantBigA_input_event"]
[connection signal="input_event" from="House/kuna" to="KunaHouseManager" method="_on_kuna_input_event"]
[connection signal="input_event" from="House/lampBedsideA" to="KunaHouseManager" method="_on_lampBedsideA_input_event"]
[connection signal="input_event" from="HouseGUI/HouseArrowRight" to="KunaHouseManager" method="_on_HouseArrowRight_input_event"]
[connection signal="input_event" from="HouseGUI/HouseArrowLeft" to="KunaHouseManager" method="_on_HouseArrowLeft_input_event"]
